--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         <div class="navigation">
             <ul>
                 <i id="menu-close" class="fas fa-times"></i>
-                <li><a class="active" href="tentang.html">Tentang Kami</a></li>
+                <li><a class="active" href="index.html">Tentang Kami</a></li>
                 <li><a href="fasilitas.html">Fasilitas</a></li>
                 <li><a href="kemahasiswaan.html">Kemahasiswaan</a></li>
             </ul>
