--- a/kemahasiswaan.html
+++ b/kemahasiswaan.html
@@ -17,7 +17,7 @@
       <a class="logolink" href="tentangkami.html"><img src="image/logo.png" alt="Logo FMIPA"></a>
       <div class="navigation">
         <ul>
-          <li><a href="tentangkami.html">Tentang Kami</a></li>
+          <li><a href="index.html">Tentang Kami</a></li>
           <li><a href="fasilitas.html">Fasilitas</a></li>
           <li><a href="kemahasiswaan.html" class="active">Kemahasiswaan</a></li>
         </ul>
